# leafy-bank-backend-capitalmarkets-react-agent-crypto

./: .drone.yml  .gitignore  README.md  docker-compose.yml  makefile
backend/: api_checkpointer.py  api_market_assistant.py  checkpointer_memory_jobs.py  console_market_assistant.py  main.py  pyproject.toml
backend/agent/: profiles.py  react_agent.py  react_agent_console.py  react_agent_tools.py
backend/agent/bedrock/: client.py
backend/agent/db/: vector_search_index_creator.py
backend/agent/vogayeai/: vogaye_ai_embeddings.py
backend/db/collections/: agentic_capital_markets.agent_profiles.json  agentic_capital_markets.crypto_portfolio_allocation.json  agentic_capital_markets.portfolio_allocation.json  agentic_capital_markets.portfolio_performance.json  agentic_capital_markets.reports_crypto_analysis.json  agentic_capital_markets.reports_crypto_news.json  agentic_capital_markets.reports_crypto_sm.json  agentic_capital_markets.reports_market_analysis.json  agentic_capital_markets.reports_market_news.json  agentic_capital_markets.risk_profiles.json
environments/: prod.yaml  staging.yaml
